    - Closes #4740.
  - Fix free town/nation rename exploit, courtesy of Warriorrrr with PR #4743.
  - Fix potential safe mode from removing corrupted nation which cannot return a king.
  - Remove 1.14 crafting blocks from config's switch ids, courtesy of Warriorrrr with PR #4744.
0.96.7.3:
  - Fix town delete message being sent twice, courtesy of Warriorrrr with PR #4746.
  - New RELATIONAL placeholder: %rel_townyadvanced_color%
    - Applies the colour codes set in the config.yml's new papi_relational_formatting section.
    - Used in TAB and other plugins which can do Relational placeholders.
    - Closes #4747, Closes #4349.
  - Make /t set outpost do more than show null when used in the wilderness.
  - Add PlotToggle events to toggling plot groups, courtesy of Warriorrrr with PR #4748.
  - Make toggling REDSTONE_WIRE into a destroy test.
  - Update POM: Dependencies, Plugins, and HTTPS, courtesy of TheFlagCourier with PR #4749.
  - Fix empty nations not being deleted on startup with flatfile, courtesy of Warriorrrr with PR #4753.
  - Add config option for ignoring min_distance's for allies, courtesy of Warriorrrr with PR #4752.
  - New Config Option: town.min_distances_ignored_for_towns_in_allied_nation
    - Default: false
    - If true, the settings: min_plot_distance_from_town_plot and min_distance_from_town_homeblock will be ignored for towns that are mutually allied. 
    - Setting to false will keep all towns separated the same if they are allies.
0.96.7.4:
  - Correctly show the proper already registered messages when using /ta set mayor TOWN PLAYER command.
  - API: added convenience methods to TownyAPI:
    - getResidentTownOrNull(resident)
    - getResidentNationOrNull(resident)
    - getTownNationOrNull(town)
  - Fix possible NPE when unjailing a resident.
  - Fix being unable to claim a personally-owned plot being sold by a resident.
    - Closes #4767.
  - Fix mayors unable to use /plot nfs on personally-owned plots owned by their town.