@@ -5840,3 +5840,8 @@ v0.92.0.11:
   - Fix being unable to claim a personally-owned plot being sold by a resident.
     - Closes #4767.
   - Fix mayors unable to use /plot nfs on personally-owned plots owned by their town.
+  - Adapt to spigot bug being closed, allowing us to prevent explosions from dropping items without setting the exploded block to air.
+    - Closes #4770.
+    - Closes #4771.
+  - API: TownyExplodingBlocksEvent 
+    - Add getBukkitExplodeEvent for convenience.
